<resources>
    <string name="app_name">AndroidFormulari</string>
    <string name="lblName">Nom:</string>
    <string name="hintName">Escriu nom</string>
    <string name="hintEmail">Escriu email</string>
    <string name="lblEmail">Email:</string>
    <string name="lblPhone">Telefono:</string>
    <string name="hintPhone">Escribe telefono</string>
    <string name="lblPassword">Contraseña:</string>
    <string name="hintPassword">Escribe contraseña</string>
    <string name="btnOk">Aceptar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="err_empty">No puede estar vacio</string>
    <string name="btn_yes">Si</string>
    <string name="btn_no">No</string>
    <string name="questionDelete">¿Seguro que quieres borrar los campos?</string>
    <string name="lblDate">Fecha nacimiento</string>
    <string name="hintDate">Escribe fecha nacimiento</string>
</resources>
